--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^6.4.1",
     "@mui/lab": "^6.0.0-beta.31",
-    "@mui/material": "^6.4.12",
+    "@mui/material": "^6.5.0",
     "@mui/x-data-grid": "^7.25.0",
+    "@mui/x-date-pickers": "^8.9.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
